update youtube links

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <p>In this video, we showcase the communication between agents during the construction task. The agents talk about what resources they have, and split up the work.</p>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="TtHg3AagACg"></div>
+                            <div class="looping-video" data-video-id="CRBhZsmR6eo"></div>
                         </div>
                     </div>
                     
@@ -277,7 +277,7 @@
                     <p>In this video we show the agents building a church. </p>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="Cpy4kQ9-bsg"></div>
+                            <div class="looping-video" data-video-id="YGzzgoJ5CJw"></div>
                         </div>
                     </div>
                     <h3>Failure Modes</h3>
@@ -285,14 +285,14 @@
                     <p>Here is an example of the agents failing to build a church. One agent builds the foundation and then the other bots completely destroy it. </p>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="nSHetOFrVPI"></div>
+                            <div class="looping-video" data-video-id="UkrTrOsGBEo"></div>
                         </div>
                     </div>
-                    <div class="container">
+                    <!-- <div class="container">
                         <div class="video-container">
                             <div class="looping-video" data-video-id="97Ot9ASEdkY"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
                 </div>
             </div>
@@ -312,24 +312,24 @@
                     <h3>Cooking Showcase</h3>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="LqWwxu2UhFg"></div>
+                            <div class="looping-video" data-video-id="bI8Z_YIAU6A"></div>
                         </div>
                     </div>
 
                     <h3>Cooking Footage and Communication Showcase</h3>
-                    <p>The goal of this task is to make a golden apple and rabbit stew. </p>
+                    <!-- <p>The goal of this task is to make a golden apple and rabbit stew. </p> -->
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="FbNJ3cR_RWY"></div>
+                            <div class="looping-video" data-video-id="VGTcwcEokFI"></div>
                         </div>
                     </div>
-                    <h3>Cooking Inside the House </h3>
+                    <!-- <h3>Cooking Inside the House </h3>
                     <p>The goal of this task is to make a golden apple and a baked potato. You can see that they share resources to complete the task. All the items need to be present in one agents inventory for the task to be counted as successful.</p>
                     <div class="container">
                         <div class="video-container">
                             <div class="looping-video" data-video-id="GiTGx2OfN5U"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
             </div>
         </section>
