--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
                 Agents are evaluated via an edit distance based metric that judges how close their constructed building is to the blueprint and the metric reported in the leaderboard is the average of those edit distance scores.
                 
                 <section class="video-section">
-                    <h3>Timelapse Video</h3>
+                    <!-- <h3>Timelapse Video</h3>
                     <div class="container">
                         <div class="video-container">
                             <div class="looping-video" data-video-id="vuBycbn35Rw"></div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <h3>Communication Showcase</h3>
                     <p>In this video, we showcase the communication between agents during the construction task. The agents talk about what resources they have, and split up the work.</p>
@@ -334,7 +334,7 @@
             </div>
         </section>
 
-        <section class="demos-section">
+        <!-- <section class="demos-section">
             <div class="container">
                 <h2>Crafting Tasks</h2>
                 <p> Crafting has long been the subject of Minecraft agent research---our crafting tasks encompass the entire breadth of items that are craftable in Minecraft including clothing, furniture, and tools.  
@@ -358,7 +358,7 @@
                     </div>
                 </section>
             </div>
-        </section>
+        </section> -->
     </main>
 
     
