get rid of leaderboard

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
         </section>
 
-        <section class="leaderboard-section">
+        <!-- <section class="leaderboard-section">
             <div class="container">
                 <h2>Overall Performance</h2>
                 <p> Cooking and crafting scores are calculated as the average success rate and 
@@ -183,7 +183,7 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+            </div> -->
         
             <style>
                 .sorting-controls {
