update with more videos

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="container">
                 <h2>Demo Video</h2>
                 <div class="video-container">
-                    <div class="looping-video" data-video-id="TSPQvvonn10"></div>
+                    <div class="looping-video" data-video-id="zV_FldGz0YE"></div>
                 </div>
             </div>
         </section>
@@ -258,12 +258,12 @@
                 Agents are evaluated via an edit distance based metric that judges how close their constructed building is to the blueprint and the metric reported in the leaderboard is the average of those edit distance scores.
                 
                 <section class="video-section">
-                    <!-- <h3>Timelapse Video</h3>
+                    <h3>Timelapse Video</h3>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="vuBycbn35Rw"></div>
+                            <div class="looping-video" data-video-id="TSPQvvonn10"></div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <h3>Communication Showcase</h3>
                     <p>In this video, we showcase the communication between agents during the construction task. The agents talk about what resources they have, and split up the work.</p>
@@ -334,7 +334,7 @@
             </div>
         </section>
 
-        <!-- <section class="demos-section">
+        <section class="demos-section">
             <div class="container">
                 <h2>Crafting Tasks</h2>
                 <p> Crafting has long been the subject of Minecraft agent research---our crafting tasks encompass the entire breadth of items that are craftable in Minecraft including clothing, furniture, and tools.  
@@ -346,19 +346,19 @@
                     <p>The goal of this task is to make a bookshelf. </p>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="VMAyxwMKiBc"></div>
+                            <div class="looping-video" data-video-id="7iR_2kVxkB0"></div>
                         </div>
                     </div>
                     <h3>Failure Mode</h3>
                     <p>The agents fail at these tasks when they engage in useless chatter unrelated to their main goal. Such as this one, where they should be sharing resources but instead embark on a hopeless quest to find spiders. </p>
                     <div class="container">
                         <div class="video-container">
-                            <div class="looping-video" data-video-id="NL1annIFX2k"></div>
+                            <div class="looping-video" data-video-id="dB5kViCNMRQ"></div>
                         </div>
                     </div>
                 </section>
             </div>
-        </section> -->
+        </section>
     </main>
 
     
